--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ discord.py==2.3.2
 opencv-python-headless==4.8.0.76
 pytesseract==0.3.10
 pandas==2.0.3
-numpy
+numpy==1.24.4
 Flask==3.0.0
 PyNaCl==1.5.0
